--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,13 @@
-
 #postgres config
 spring.datasource.url=jdbc:postgresql://localhost:5432/super_erp
 spring.datasource.username=postgres
 spring.datasource.password=postgres123
 
 #jpa
-spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
 spring.datasource.hikari.minimum-idle=5
@@ -20,5 +22,11 @@ spring.datasource.hikari.connection-timeout=20000
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.mode=HTML
+
+#flyway
+spring.flyway.repair=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
+
 
 
